; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/handler/extr_........libhandlerheaders.c_requires_early_hints_handler.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/handler/extr_........libhandlerheaders.c_requires_early_hints_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_headers_filter_t = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i64 }

@H2O_HEADERS_CMD_NULL = common dso_local global i64 0, align 8
@H2O_HEADERS_CMD_UNSET = common dso_local global i64 0, align 8
@H2O_HEADERS_CMD_WHEN_FINAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.st_headers_filter_t*)* @requires_early_hints_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @requires_early_hints_handler(%struct.st_headers_filter_t* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.st_headers_filter_t*, align 8
  %4 = alloca %struct.TYPE_2__*, align 8
  store %struct.st_headers_filter_t* %0, %struct.st_headers_filter_t** %3, align 8
  %5 = load %struct.st_headers_filter_t*, %struct.st_headers_filter_t** %3, align 8
  %6 = getelementptr inbounds %struct.st_headers_filter_t, %struct.st_headers_filter_t* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  store %struct.TYPE_2__* %7, %struct.TYPE_2__** %4, align 8
  br label %8

8:                                                ; preds = %28, %1
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @H2O_HEADERS_CMD_NULL, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %31

14:                                               ; preds = %8
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @H2O_HEADERS_CMD_UNSET, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %27

20:                                               ; preds = %14
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 1
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @H2O_HEADERS_CMD_WHEN_FINAL, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %20
  store i32 1, i32* %2, align 4
  br label %32

27:                                               ; preds = %20, %14
  br label %28

28:                                               ; preds = %27
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 1
  store %struct.TYPE_2__* %30, %struct.TYPE_2__** %4, align 8
  br label %8

31:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %32

32:                                               ; preds = %31, %26
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
